--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "ext-mbstring": "*",
         "laminas/laminas-escaper": "^2.13",
         "psr/log": "^3.0",
-        "twbs/bootstrap": "5.3.3"
+        "twbs/bootstrap": "5.3.3",
+        "twbs/bootstrap-icons": "^1.11"
     },
     "require-dev": {
         "codeigniter/coding-standard": "^1.7",
